3 files modified, 1 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- header -->
-    <app-header></app-header>
-<app-login></app-login>
-   
-    <!-- footer -->
-    <app-footer></app-footer>
+<app-header></app-header>
+<!-- <app-login></app-login> -->
+<app-dashboard></app-dashboard>
+
+<!-- footer -->
+<app-footer></app-footer>
