4 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- header -->
 <app-header></app-header>
 <!-- <app-login></app-login> -->
-<app-dashboard></app-dashboard>
-
+<!-- <app-dashboard></app-dashboard> -->
+<app-search-flight></app-search-flight>
 <!-- footer -->
 <app-footer></app-footer>
