2 files modified, 4 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-header></app-header>
 <!-- <app-login></app-login> -->
 <!-- <app-dashboard></app-dashboard> -->
-<app-search-flight></app-search-flight>
+<!-- <app-search-flight></app-search-flight> -->
+<app-customer></app-customer>
 <!-- footer -->
 <app-footer></app-footer>
